[gd_scene load_steps=4 format=2]

[ext_resource path="res://characters/character/input/InputController.gd" type="Script" id=1]
[ext_resource path="res://characters/character/Character.gd" type="Script" id=2]
[ext_resource path="res://characters/character/CharacterStateMachine.gd" type="Script" id=3]

[node name="Character" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 5
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="InputController" type="Node" parent="."]
script = ExtResource( 1 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 3 )

[node name="Colliders" type="Node2D" parent="."]

[node name="InteractionRay" type="RayCast2D" parent="Colliders"]
enabled = true
cast_to = Vector2( 20, 0 )
collision_mask = 2
collide_with_areas = true
